--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
         >
       </div>
     </div>
-    <script src="./index.html"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
